# orcaai

./: .env.example  .gitignore  LICENSE  README.md  Yeni Metin Belgesi.txt  go.mod  go.sum  package-lock.json
.github/workflows/: ci.yml
backend/: Dockerfile  Makefile  go.mod  main.go
backend/config/: config.go
backend/database/: connection.go
backend/handlers/: admin_handler.go  ai_handler.go  auth_handler.go  enterprise_handler.go  metrics_handler.go  user_handler.go
backend/middleware/: auth.go  rbac.go
backend/models/: user.go
backend/orchestrator/: brain.go  cache.go  cache_test.go  load_balancer.go  metrics.go  metrics_collector.go  metrics_test.go  providers.go  providers_openai.go  routing.go  routing_test.go
backend/utils/: aesgcm.go
cli/: Makefile  README.md  build.sh  go.mod  main.go  main_test.go
cli/commands/: auth.go  auth_test.go  config.go  config_test.go  keys.go  keys_test.go  metrics.go  metrics_test.go  providers.go  query.go  (+4 more)
dashboard/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js
deployment/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.worker  docker-compose.yml
examples/: cli_commands.txt  curl_example.sh  javascript_example.js  python_example.py
python-ai-worker/: Dockerfile  requirements.txt  worker.py
scripts/: setup.sh
sdk/python/: MANIFEST.in  Makefile  README.md  example.py  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
sdk/python/orcaai/: __init__.py  client.py  exceptions.py
sdk/python/tests/: conftest.py  test_client.py  test_import.py  test_metrics.py
(+32 files in other folders)
